# bgc-sw-development

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  burckjm1.ipynb  cafile-with-apl.pem  poetry.toml  pyinstaller-bgc-sw.spec  pyproject.toml
docs/: Backend-Design.md  fastapi-pyinstaller.md
drivers/: README.md  com_info.json
drivers/apl/: pymodbus_playpen.py
drivers/clarity/: README.md  clarity_driver.py
drivers/flame_igniter/: FPD.md  README.md  flame_igniter_driver.py  flame_igniter_hw_test.py
drivers/flame_igniter/IgnitionCode/: IgnitionCode.ino
drivers/flame_igniter/in_progress/: flame_igniter_driver.py
drivers/mfc/: alicat_basis_mfc_driver.py  alicat_basis_mfc_hw_test.py  bronkhorst_iq_flow_mfc_driver.py
drivers/mfc/in_progress/: BasisMFC.py  controller.py  serialClient.py
drivers/mfm/: bronkhorst_iq_flow_mfm_driver.py
drivers/modbus/: base_classes.py  serial_drivers.py  simulation.py  simulation_funcs.py
drivers/pneumatic_actuators/: README.md  ValveControl.md
drivers/pneumatic_actuators/edgeControl/: edgeControl.ino
drivers/watlow/: watlow_ez_zone_rmh_driver.py  watlow_ez_zone_rmh_hw_test.py
drivers/watlow/in_progress/: AnalogInput1_Changing_Settings.py  AnalogInput1_Heating_test.py  AnalogInput1_Temperature_Continous.py  Column_Transfer_In.py  FPD_Block.py  MultipleInputs_Temperature_Continous.py  Valve_Oven_1.py  Valve_Oven_1_fun.py  Valve_Oven_2A.py  Valve_Oven_2B.py  Valve_Oven_3.py  Watlow_MainControl.py  Watlow_Temperature_Reads.py
frontend/: .eslintrc.json  .npmrc  .prettierignore  .prettierrc.json  README.md  angular.json  gen-api-controller.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: fonts.css  index.html  styles.scss  theme.scss
frontend/src/api/controller/: base-service.ts  controller-api-configuration.ts  controller-api.module.ts  models.ts  services.ts
frontend/src/app/: app.component.html  app.component.spec.ts  app.module.ts
frontend/src/app/classes/: app-interface.ts  method.ts
frontend/src/app/report-bar/: report-bar.component.html  report-bar.component.spec.ts  report-bar.component.ts
frontend/src/environments/: environment.prod.ts  environment.ts
scripts/: lint.bat  lint.sh
server/: README.md
server/app/: async_template_stuff.py  main.py
server/app/core/: device_info.py
server/app/rest/routes/: README.md  api.py  bgc_method.py  clarity.py  digital_io.py  flame_control.py  gas_flow.py  (+2 more)
server/distribute/: README.md  launch.py  package.bat
server/utils/: type_utils.py
tests/: __init__.py  test_nothing.py
tests/drivers/: test_modbus_simulation.py
(+107 files in other folders)
